--- a/BizwebTutorial/BizwebTutorial.csproj
+++ b/BizwebTutorial/BizwebTutorial.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="Areas\Admin\Common\CustomMembershipProvider.cs" />
+    <Compile Include="Areas\Admin\Controllers\CommentController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\OrderController.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
@@ -215,6 +216,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Admin\Controllers\SLideController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Controllers\CategoryViewController.cs" />
     <Compile Include="Controllers\CustomerLoginController.cs" />
@@ -1544,6 +1546,9 @@
     <Content Include="Assets\lightslider-master\README.md" />
     <Content Include="Assets\lightslider-master\src\js\.jshintrc" />
     <Content Include="Assets\lightslider-master\test\.jshintrc" />
+    <Content Include="Areas\Admin\Views\SLide\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Comment\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Comment\Details.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="ImageHome\1.jpg" />
     <Content Include="ImageHome\1.png" />
@@ -1668,6 +1673,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Assets\Admin\UploadImage\" />
+    <Folder Include="SlideImages\" />
     <Folder Include="UploadProduct\" />
   </ItemGroup>
   <ItemGroup>
