--- a/BizwebTutorial/BizwebTutorial.csproj
+++ b/BizwebTutorial/BizwebTutorial.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Dao\CategoryViewDao.cs" />
     <Compile Include="Dao\CollectionViewDao.cs" />
     <Compile Include="Dao\CustomerViewDao.cs" />
+    <Compile Include="Dao\Encryptor.cs" />
     <Compile Include="Dao\OrderDaoView.cs" />
     <Compile Include="Dao\ProductViewDao.cs" />
     <Compile Include="Global.asax.cs">
@@ -987,6 +988,15 @@
     <Content Include="Assets\FrontEndCss\CustomerStyle.css" />
     <Content Include="Assets\FrontEndCss\HomeStyle.css" />
     <Content Include="Assets\FrontEndCss\HoverCat.css" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\.gitignore" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\examples\appendTo.html" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\examples\bootstrap.html" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\examples\jgrowl.html" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\Gruntfile.js" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jquery.jgrowl.css" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jquery.jgrowl.js" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jquery.jgrowl.min.css" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jquery.jgrowl.min.js" />
     <Content Include="Assets\FrontEndCss\JsCart.js" />
     <Content Include="Assets\FrontEndCss\navtab.css" />
     <Content Include="Assets\FrontEndCss\productstylesheet.css" />
@@ -1549,6 +1559,16 @@
     <Content Include="Areas\Admin\Views\SLide\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Comment\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Comment\Details.cshtml" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\bower.json" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\examples\.DS_Store" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jgrowl.jquery.json" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\jquery.jgrowl.map" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\less\jgrowl.core.less" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\less\jgrowl.less" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\less\jgrowl.variables.less" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\LICENSE" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\package.json" />
+    <Content Include="Assets\FrontEndCss\jGrowl-master\jGrowl-master\README.md" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="ImageHome\1.jpg" />
     <Content Include="ImageHome\1.png" />
@@ -1662,7 +1682,6 @@
     <Content Include="Views\CustomerLogin\Login.cshtml" />
     <Content Include="Views\CustomerLogin\CustomerResgistration.cshtml" />
     <Content Include="Views\CustomerLogin\Index.cshtml" />
-    <Content Include="Views\ShopingCart\AddCart.cshtml" />
     <Content Include="Views\ShopingCart\DisplayCart.cshtml" />
     <Content Include="Views\OrderView\Create.cshtml" />
     <Content Include="Views\ProductView\Details.cshtml" />
